# GeoECGAN

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  eeg_to_text_all_combos.py  evaluate.py  geoecgan.py  pyproject.toml  test-eeg_to_text_all_combos.py  train.py
