[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoecgan"
version = "0.1.0"
description = "GAN-based geometry + NPI fusion scaffold"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name="Your Name", email="email@example.com"}]
dependencies = [
  "torch>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
